# Maccy-plus

./: .gitignore  Cargo.toml  appcast-beta.xml  appcast.xml
.github/workflows/: build.yml
Maccy/: About.swift  AppDelegate.swift  ApplicationImageCache.swift  Clipboard.swift  Info.plist  KeyChord.swift  Maccy-Bridging-Header.h  MaccyCore.swift  SoftwareUpdater.swift
Maccy.xcodeproj/: project.pbxproj
Maccy/Extensions/: Defaults.Keys+Names.swift  NSImage+Resized.swift  NSPasteboard.PasteboardType+Types.swift
Maccy/Include/: maccy_sync.h
Maccy/Intents/: Get.swift
Maccy/Models/: HistoryItem.swift
Maccy/Observables/: AppState.swift  History.swift  HistoryItemDecorator.swift  SlideoutController.swift
Maccy/Settings/: GeneralSettingsPane.swift  PinsSettingsPane.swift  StorageSettingsPane.swift  SyncSettingsPane.swift
Maccy/Settings/en.lproj/: GeneralSettings.strings  StorageSettings.strings  SyncSettings.strings
Maccy/Settings/zh-Hans.lproj/: GeneralSettings.strings
Maccy/Sync/: SyncBridge.swift  SyncModels.swift
Maccy/Views/: ActionIconButton.swift  AppFilterBar.swift  ContentView.swift  DeviceFilterIcon.swift  HeaderView.swift  HistoryItemView.swift  KeyHandlingView.swift  ListHeaderView.swift  PreviewItemView.swift
Maccy/Views/en.lproj/: PreviewItemView.strings
Maccy/ar.lproj/: Localizable.strings
Maccy/be.lproj/: Localizable.strings
Maccy/bn.lproj/: Localizable.strings
Maccy/bs.lproj/: Localizable.strings
Maccy/ca.lproj/: Localizable.strings
Maccy/ckb.lproj/: Localizable.strings
Maccy/cs.lproj/: Localizable.strings
Maccy/de.lproj/: Localizable.strings
Maccy/el.lproj/: Localizable.strings
Maccy/en.lproj/: Localizable.strings
Maccy/eo.lproj/: Localizable.strings
Maccy/es.lproj/: Localizable.strings
Maccy/fr.lproj/: Localizable.strings
Maccy/he.lproj/: Localizable.strings
Maccy/hr.lproj/: Localizable.strings
Maccy/hu.lproj/: Localizable.strings
Maccy/it.lproj/: Localizable.strings
Maccy/ja.lproj/: Localizable.strings
Maccy/ko.lproj/: Localizable.strings
Maccy/lt.lproj/: Localizable.strings
Maccy/lv.lproj/: Localizable.strings
Maccy/nb.lproj/: Localizable.strings
Maccy/nl.lproj/: Localizable.strings
Maccy/pl.lproj/: Localizable.strings
Maccy/pt-BR.lproj/: Localizable.strings
Maccy/pt.lproj/: Localizable.strings
Maccy/ro.lproj/: Localizable.strings
Maccy/ru.lproj/: Localizable.strings
Maccy/sl.lproj/: Localizable.strings
Maccy/th.lproj/: Localizable.strings
Maccy/tr.lproj/: Localizable.strings
Maccy/uk.lproj/: Localizable.strings
Maccy/uz.lproj/: Localizable.strings
Maccy/vi.lproj/: Localizable.strings
Maccy/zh-Hans.lproj/: Localizable.strings
Maccy/zh-Hant.lproj/: Localizable.strings
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/kaigedong/maccy/: ClipboardService.kt  HistoryViewModel.kt  LogManager.kt  MainActivity.kt
android/app/src/main/java/com/kaigedong/maccy/ui/: HistoryListScreen.kt  LogScreen.kt
android/app/src/main/java/com/kaigedong/maccy/ui/theme/: Theme.kt
crates/maccy-core/: Cargo.toml  uniffi.toml
crates/maccy-core/src/: error.rs  history.rs  lib.rs  model.rs  platform.rs  search.rs  sort.rs  storage.rs  sync.rs
crates/maccy-sync/: Cargo.toml  build.rs  cbindgen.toml  maccy_sync.h
crates/maccy-sync/src/: crypto.rs  error.rs  ffi.rs  lib.rs  network.rs  state.rs  types.rs
crates/maccy-sync/tests/: integration_test.rs
maccy-sync/: Cargo.toml  maccy_sync.h
maccy-sync/src/: crypto.rs  ffi.rs  lib.rs  state.rs
