[package]
name = "maccy-sync"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "P2P clipboard sync engine for Maccy-plus"

[lib]
crate-type = ["staticlib"]

[dependencies]
libp2p = { version = "0.54", features = [
    "tokio", "mdns", "gossipsub", "noise", "tcp", "yamux",
    "identify", "macros", "ed25519"
] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
log = "0.4"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
hex = "0.4"

[build-dependencies]
cbindgen = "0.27"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
