[package]
name = "maccy-core"
version = "0.1.0"
edition = "2021"
description = "Cross-platform core for Maccy clipboard manager"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "maccy_core"

[dependencies]
uniffi = { version = "0.31", features = ["cli"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
fuzzy-matcher = "0.3"
regex = "1"
log = "0.4"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
